Update deployment configuration for Tencent Cloud: Refactor Dockerfile to use Python 3-alpine, enhance .dockerignore for better file exclusion, and add GitHub Actions workflow for automated deployment. Include CloudBase deployment guide in README.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,21 @@
-__pycache__
+Dockerfile
+README.md
 *.pyc
 *.pyo
 *.pyd
-.Python
-venv/
+__pycache__
+.pytest_cache
 env/
-.venv
+venv/
 .git
 .gitignore
 .DS_Store
 *.log
+.config.json
+# 保留目录结构，但排除文件内容
 exports/*
 uploads/*
+backups/*
 !exports/.gitkeep
 !uploads/.gitkeep
-.config.json
 
