Update deployment documentation and configuration: Clarify Dockerfile detection in CLOUDBASE_DEPLOY.md, add troubleshooting section for '--dockerfilePath' error in TROUBLESHOOTING.md, and remove '--dockerfilePath' from GitHub Actions workflow for improved compatibility with CloudBase CLI.

--- a/.github/workflows/cloudbase-deploy.yml
+++ b/.github/workflows/cloudbase-deploy.yml
@@ -35,8 +35,6 @@ jobs:
         run: |
           tcb cloudrun deploy \
             --envId ${{ secrets.TCB_ENV_ID }} \
-            --serviceName ${{ secrets.TCB_SERVICE_NAME || 'budget-manager' }} \
-            --dockerfilePath ./Dockerfile \
-            --ignore .git,.github,venv,__pycache__,*.pyc,exports,uploads,backups,logs
+            --serviceName ${{ secrets.TCB_SERVICE_NAME || 'budget-manager' }}
         continue-on-error: false
 
